z-index stacking fixes

--- a/vscode/src/webviews/app/styles/webview.less
+++ b/vscode/src/webviews/app/styles/webview.less
@@ -394,7 +394,7 @@ body.preload * {
 	  
 	.shadow {
 		position: absolute;
-		z-index: 11;
+		z-index: 4;
 	}
 
 	.shadow-top {
@@ -423,7 +423,7 @@ body.preload * {
 		width: 100%;
 		background: @app-background-color;
 		position: relative;
-		z-index: 12;
+		z-index: 5;
 	}
 	  
 	.shadow-cover-bottom {
@@ -435,7 +435,7 @@ body.preload * {
 		position: relative;
 		// position: absolute;
 		// bottom: 0;
-		z-index: 12;
+		z-index: 5;
 	}
 }
 
